dev!(uncompilable): Update dev branch, progress tracking